--- a/index.html
+++ b/index.html
@@ -260,6 +260,16 @@
         }
 
         /* Styles for the stylish modal */
+        #access-denied-modal, #vpn-detected-modal .vpn-modal-content {
+            border-radius: 1rem;
+            padding: 2rem;
+            text-align: center;
+            /* Ensure modal content is responsive */
+            width: 90%;
+            max-width: 500px;
+            box-sizing: border-box;
+            font-size: 1.25rem;
+        }
         #access-denied-modal {
             position: fixed;
             top: 50%;
@@ -267,10 +277,7 @@
             transform: translate(-50%, -50%) scale(0.7);
             background-color: #2d3748;
             border: 2px solid #8b0000;
-            padding: 2rem;
-            border-radius: 1rem;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
-            text-align: center;
             z-index: 100;
             opacity: 0;
             visibility: hidden;
@@ -317,10 +324,16 @@
         .vpn-modal-content {
             background: #1f2937;
             border: 2px solid #ff4500;
-            border-radius: 1rem;
-            padding: 3rem;
             box-shadow: 0 0 30px rgba(255, 69, 0, 0.7);
             animation: pulse-border-glow 2s infinite, scale-up 0.5s ease-out;
+        }
+        
+        .vpn-modal-content p {
+            font-size: 1.25rem;
+        }
+        .vpn-modal-content .text-3xl {
+            font-size: 2rem;
+            font-weight: bold;
         }
 
         @keyframes pulse-border-glow {
@@ -412,32 +425,35 @@
         .verification-spinner {
             width: 50px;
             height: 50px;
-            border: 4px solid rgba(255, 255, 255, 0.2);
-            border-top: 4px solid #ff4500;
             border-radius: 50%;
+            border: 4px solid transparent;
+            border-left-color: #ff4500;
+            border-right-color: #ff4500;
             position: relative;
-            animation: spin 1.5s linear infinite;
+            animation: spin 1.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
         }
         .verification-spinner::before {
             content: '';
             position: absolute;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 4px solid transparent;
+            border-top-color: #ff4500;
+            border-bottom-color: #ff4500;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            background: rgba(255, 69, 0, 0.3);
-            animation: pulse-glow 1.5s ease-out infinite;
+            transform: translate(-50%, -50%) rotate(45deg);
+            animation: spin-reverse 2s linear infinite;
         }
+
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
-        @keyframes pulse-glow {
-            0% { transform: translate(-50%, -50%) scale(0.5); opacity: 0.6; }
-            50% { transform: translate(-50%, -50%) scale(1.1); opacity: 0.8; }
-            100% { transform: translate(-50%, -50%) scale(0.5); opacity: 0.6; }
+        @keyframes spin-reverse {
+            0% { transform: translate(-50%, -50%) rotate(45deg); }
+            100% { transform: translate(-50%, -50%) rotate(405deg); }
         }
     </style>
 </head>
@@ -465,7 +481,7 @@
 
     <!-- Login Page -->
     <div id="loginPage" class="login-container">
-        <h1 class="login-title">SHADOW</h1>
+        <h1 class="login-title text-3xl sm:text-4xl">SHADOW</h1>
         <img src="https://i.imgur.com/OZMEnuP.jpeg" alt="SHADOW Logo" class="logo-img">
         <div class="flex flex-col items-center w-full">
             <input type="password" id="passwordInput" placeholder="Enter Password" class="pass-input w-full max-w-sm px-4 py-3 rounded-xl text-center mb-4">
@@ -482,7 +498,7 @@
 
     <!-- Main Page -->
     <div id="mainPage" class="main-container">
-        <h1 class="shadow-name text-center">SHADOW</h1>
+        <h1 class="shadow-name text-3xl sm:text-4xl text-center">SHADOW</h1>
         
         <div id="recaptchaContainer" class="recaptcha-container mt-8 relative">
             <div id="recaptchaWrapper" class="recaptcha-checkbox-wrapper space-x-4">
@@ -505,8 +521,8 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
                         </svg>
                     </div>
-                    <div class="flex-grow">
-                        <p class="font-bold">Astute Beta 2.114.1</p>
+                    <div class="flex-grow text-left overflow-hidden">
+                        <p class="font-bold truncate">Astute Beta 2.114.1</p>
                         <p class="text-sm text-gray-400">155.1MB</p>
                     </div>
                 </div>
@@ -523,8 +539,8 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
                         </svg>
                     </div>
-                    <div class="flex-grow">
-                        <p class="font-bold">main.2019115651.com.dts.freefiremax.obb</p>
+                    <div class="flex-grow text-left overflow-hidden">
+                        <p class="font-bold truncate">main.2019115651.com.dts.freefiremax.obb</p>
                         <p class="text-sm text-gray-400">284.5MB</p>
                     </div>
                 </div>
