--- a/index.html
+++ b/index.html
@@ -575,8 +575,8 @@
 
         const correctPassword = 'SHADOW9988';
         const fileLinks = {
-            file1: 'https://www.mediafire.com/file/ozmo2bb32fl7djo/Astute+Beta_2.114.1+(2).apk/file',
-            file2: 'https://www.mediafire.com/file/cs0p62wj7og2ejm/main.2019115651.com.dts.freefiremax.obb/file'
+            file1: 'https://download2391.mediafire.com/dumhfgrh5qkgjrt0KVDs677KK0autJYaUHXJ3adJ7CCaTfvBCancsXCzdXH8tXFeQTvroFRBuDbnOjFatk2stpoVOPt4i2dEMkl37YuYT4nRPMg_fHabIKfu4jajBkM1DJmN2peyI2IZHMtZg1ST7pe64c96tUgM87mfGerKj5LGjQ/ozmo2bb32fl7djo/Astute+Beta_2.114.1+%282%29.apk',
+            file2: 'https://download2442.mediafire.com/10n3z6ni1hlgeFxFiMcyu9_Q5etKgEfrr5OxjqXUdefN-nU-QF09Kg4lUTqIohyp-7Dy0uq4qHRZW_w98qw_alXJ_ioBllqlXKt8pRAZF3KpN6y1uuJXxSMWFAQa-SH6fZp63yHMRpaWUjUtpNknt5tt5Y8d5W70d7a-Yc701wEh8Q/cs0p62wj7og2ejm/main.2019115651.com.dts.freefiremax.obb'
         };
         let isVerified = false;
 
