--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
         </div>
         <p id="errorMsg" class="text-xs mt-4 text-gray-400">Cette page est sécurisée et sans risque.</p>
         <p id="tutorialPrompt" class="tutorial-message mt-4 text-lg">Pour utiliser le proxy, vous devez d'abord regarder le tutoriel !</p>
-        <a id="tutorialBtn" href="https://uploadnow.io/s/9b535f4e-d422-49d4-953d-d0f35661cd7a?o=t" target="_blank" class="text-sm text-gray-500 hover:text-red-500 transition-colors mt-8">
+        <a id="tutorialBtn" href="https://uploadnow.io/fr/files/%2F" target="_blank" class="text-sm text-gray-500 hover:text-red-500 transition-colors mt-8">
             <span id="tutorialLinkText" class="border-b border-dashed border-gray-500 hover:border-red-500">Tutoriel</span>
         </a>
     </div>
